/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
 * KubeOS is licensed under the Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *     http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
 * PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

option go_package = "openeuler.org/kubeos/api/agent";

package agent;

service OS {
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

message UpdateRequest {
  string version = 1;
  string image_url = 2;
  string check_sum = 3;
  bool flagSafe = 4;
}

message UpdateResponse {
  int32 err = 1;
}
